# Generalized-Distance-Transform

./: CMakeLists.txt  README.md  dt.cpp  dt.h  dt.hpp  main.cpp
cmake/: CPPyModule.cmake  OpenCVPythonModule.cmake  gen2.py  hdr_parser.py  module.cpp  module_config.h.in  py_cv_converters.hpp  utils.hpp
cmake/src/: init_func.cpp.in  module.cpp  py_cv_converters.hpp  pycompat.hpp  utils.hpp
gen_dist_trans/src/: gen_dist_trans.cpp
gendistrans/include/opencv2/: gendistrans.hpp
gendistrans/src/: gendistrans.cpp
tests/: dontcrash.cpp  test_dontcrash.cpp
